--- a/index.html
+++ b/index.html
@@ -5,53 +5,58 @@
         <title>whoisscrape</title>
         <link rel="icon" type="image/x-icon" href="web/img/favicon.ico">
         <link rel="stylesheet" href="web/css/index.css">
+        <link rel="stylesheet" href="web/css/tiles.css">
     </head>
     <body>
-        <div id="header1Container">
-            <h1 id="mainHeader"> whoisscrape</h1>
-        </div>
-        <div id="paragraphContainer">
-            <p id="info"> This page is for displaying select results from a script I developed that can be found in my <a href="https://github.com/johnprovazek/whoisscrape">whoisscrape</a> GitHub repo. The script is a bash script to run the whois command on a loop through a list of domain names and domain extensions. </p>
-        </div>
-        <div id="header2Container">
-            <h2 id="domainNamesLabel">Domain Names Wordlist:</h2>
-        </div>
-        <div id="domainNamesRadio" class="radioContainer">
-            <div id="alpha1" class="radioButton domainRadioButton radioUnselected" onclick="showResults('alpha1',null)">ALPHA1</div
-            ><div id="alpha2" class="radioButton domainRadioButton radioUnselected" onclick="showResults('alpha2',null)">ALPHA2</div
-            ><div id="alpha3" class="radioButton domainRadioButton radioSelected" onclick="showResults('alpha3',null)">ALPHA3</div
-            ><div id="alpha4" class="radioButton domainRadioButton radioUnselected" onclick="showResults('alpha4',null)">ALPHA4</div
-            ><div id="englishdict" class="radioButton domainRadioButton radioUnselected" onclick="showResults('englishdict',null)">ENGLISHDICT</div
-            ><div id="girlnames" class="radioButton domainRadioButton radioUnselected" onclick="showResults('girlnames',null)">GIRLNAMES</div
-            ><div id="boynames" class="radioButton domainRadioButton radioUnselected" onclick="showResults('boynames',null)">BOYNAMES</div>
-        </div>
-        <div id="header2Container">
-            <h2 id="extensionNamesLabel">Domain Extensions:</h2>
-        </div>
-        <div id="extensionNamesRadio" class="radioContainer">
-            <div id="com" class="radioButton extensionRadioButton radioSelected" onclick="showResults(null, 'com')">.com</div
-            ><div id="net" class="radioButton extensionRadioButton radioUnselected" onclick="showResults(null, 'net')">.net</div
-            ><div id="us" class="radioButton extensionRadioButton radioUnselected" onclick="showResults(null, 'us')">.us</div
-            ><div id="org" class="radioButton extensionRadioButton radioUnselected" onclick="showResults(null, 'org')">.org</div
-            ><div id="io" class="radioButton extensionRadioButton radioUnselected" onclick="showResults(null, 'io')">.io</div
-            ><div id="tv" class="radioButton extensionRadioButton radioUnselected" onclick="showResults(null, 'tv')">.tv</div
-            ><div id="work" class="radioButton extensionRadioButton radioUnselected" onclick="showResults(null ,'work')">.work</div>
-        </div>
-        <div id="header2Container">
-            <h2 class="splitHeader">Free</h2><h2 class="splitHeader">Taken</h2>
-        </div>
-        <div id="freeTakenContainer">
-            <div id="freeTakenBackgroundContainer">
-                <div id="free" class="freeTakenListContainer">
-                    <ol id="freeList">
-                    </ol>
-                </div
-                ><div id="taken" class="freeTakenListContainer">
-                    <ol id="takenList">
-                    </ol>
+        <canvas id="tiles"></canvas>
+        <div id="bodyContainer">
+            <div id="header1Container">
+                <h1 id="mainHeader"> whoisscrape</h1>
+            </div>
+            <div id="paragraphContainer">
+                <p id="info"> This page is for displaying select results from a script I developed that can be found in my <a href="https://github.com/johnprovazek/whoisscrape">whoisscrape</a> GitHub repo. The script is a bash script to run the whois command on a loop through a list of domain names and domain extensions. </p>
+            </div>
+            <div id="header2Container">
+                <h2 id="domainNamesLabel">Domain Names Wordlist:</h2>
+            </div>
+            <div id="domainNamesRadio" class="radioContainer">
+                <div id="alpha1" class="radioButton domainRadioButton radioUnselected" onclick="showResults('alpha1',null)">ALPHA1</div
+                ><div id="alpha2" class="radioButton domainRadioButton radioUnselected" onclick="showResults('alpha2',null)">ALPHA2</div
+                ><div id="alpha3" class="radioButton domainRadioButton radioSelected" onclick="showResults('alpha3',null)">ALPHA3</div
+                ><div id="alpha4" class="radioButton domainRadioButton radioUnselected" onclick="showResults('alpha4',null)">ALPHA4</div
+                ><div id="englishdict" class="radioButton domainRadioButton radioUnselected" onclick="showResults('englishdict',null)">ENGLISHDICT</div
+                ><div id="girlnames" class="radioButton domainRadioButton radioUnselected" onclick="showResults('girlnames',null)">GIRLNAMES</div
+                ><div id="boynames" class="radioButton domainRadioButton radioUnselected" onclick="showResults('boynames',null)">BOYNAMES</div>
+            </div>
+            <div id="header2Container">
+                <h2 id="extensionNamesLabel">Domain Extensions:</h2>
+            </div>
+            <div id="extensionNamesRadio" class="radioContainer">
+                <div id="com" class="radioButton extensionRadioButton radioSelected" onclick="showResults(null, 'com')">.com</div
+                ><div id="net" class="radioButton extensionRadioButton radioUnselected" onclick="showResults(null, 'net')">.net</div
+                ><div id="us" class="radioButton extensionRadioButton radioUnselected" onclick="showResults(null, 'us')">.us</div
+                ><div id="org" class="radioButton extensionRadioButton radioUnselected" onclick="showResults(null, 'org')">.org</div
+                ><div id="io" class="radioButton extensionRadioButton radioUnselected" onclick="showResults(null, 'io')">.io</div
+                ><div id="tv" class="radioButton extensionRadioButton radioUnselected" onclick="showResults(null, 'tv')">.tv</div
+                ><div id="work" class="radioButton extensionRadioButton radioUnselected" onclick="showResults(null ,'work')">.work</div>
+            </div>
+            <div id="header2Container">
+                <h2 class="splitHeader">Free</h2><h2 class="splitHeader">Taken</h2>
+            </div>
+            <div id="freeTakenContainer">
+                <div id="freeTakenBackgroundContainer">
+                    <div id="free" class="freeTakenListContainer">
+                        <ol id="freeList">
+                        </ol>
+                    </div
+                    ><div id="taken" class="freeTakenListContainer">
+                        <ol id="takenList">
+                        </ol>
+                    </div>
                 </div>
             </div>
         </div>
     </body>
+    <script src="web/js/tiles.js"></script>
     <script src="web/js/index.js"></script>
 </html>
