removing tiles for now

--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
         <title>whoisscrape</title>
         <link rel="icon" type="image/x-icon" href="web/img/favicon.ico">
         <link rel="stylesheet" href="web/css/index.css">
-        <link rel="stylesheet" href="web/css/tiles.css">
+        <!-- <link rel="stylesheet" href="web/css/tiles.css"> -->
     </head>
     <body>
-        <canvas id="tiles"></canvas>
+        <!-- <div id="tilesCover"></div> -->
+        <!-- <canvas id="tiles"></canvas> -->
         <div id="bodyContainer">
             <div id="header1Container">
                 <h1 id="mainHeader"> whoisscrape</h1>
@@ -57,6 +58,6 @@
             </div>
         </div>
     </body>
-    <script src="web/js/tiles.js"></script>
     <script src="web/js/index.js"></script>
+    <!-- <script src="web/js/tiles.js"></script> -->
 </html>
