--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
         <div id="tilesCover"></div>
         <canvas id="tiles"></canvas>
         <div id="bodyContainer">
-            <div id="header1Container">
+            <div class="header1Container">
                 <h1 id="mainHeader"> whoisscrape</h1>
             </div>
             <div id="paragraphContainer">
                 <p id="preamble"> This page is for displaying select results from a script I developed that can be found in my <a href="https://github.com/johnprovazek/whoisscrape">whoisscrape</a> GitHub repo. The script is a bash script to run the whois command on a loop through a list of domain names and domain extensions. </p>
             </div>
-            <div id="header2Container">
+            <div class="header2Container">
                 <h2 id="domainNamesLabel">Domain Names Wordlist:</h2>
             </div>
             <div id="domainNamesRadio" class="radioContainer">
@@ -29,7 +29,7 @@
                 ><div id="girlnames" class="radioButton domainRadioButton radioUnselected" onclick="showResults('girlnames',null)">GIRLNAMES</div
                 ><div id="boynames" class="radioButton domainRadioButton radioUnselected" onclick="showResults('boynames',null)">BOYNAMES</div>
             </div>
-            <div id="header2Container">
+            <div class="header2Container">
                 <h2 id="extensionNamesLabel">Domain Extensions:</h2>
             </div>
             <div id="extensionNamesRadio" class="radioContainer">
@@ -37,8 +37,22 @@
                 ><div id="net" class="radioButton extensionRadioButton radioUnselected" onclick="showResults(null, 'net')">.net</div
                 ><div id="io" class="radioButton extensionRadioButton radioUnselected" onclick="showResults(null, 'io')">.io</div>
             </div>
-            <div id="header2Container">
-                <h2 class="splitHeader">Free <i class="fa fa-clone" aria-hidden="true"></i></h2><h2 class="splitHeader">Taken <i class="fa fa-clone" aria-hidden="true"></i></h2>
+            <div class="header2Container">
+                <h2 id="dateLabel"></h2>
+            </div>
+            <div class="header2Container">
+                <h2 class="splitHeader">
+                    Free
+                    <a id="freeDownload" class="download" href="" download="">
+                        <i class="fa fa-download" aria-hidden="true"></i>
+                    </a>
+                </h2
+                ><h2 class="splitHeader">
+                    Taken 
+                    <a id="takenDownload" class="download" href="" download="">
+                        <i class="fa fa-download" aria-hidden="true"></i>
+                    </a>
+                </h2>
             </div>
             <div id="freeTakenContainer">
                 <div id="freeTakenBackgroundContainer">
@@ -52,7 +66,12 @@
                     </div>
                 </div>
             </div>
-            <div id="speedyHiddenListContainer">
+            <div id="pageToggleContainer" class="header2Container">
+                <h2 id="pageToggleHeader">
+                    <i id="back" class="fa fa-arrow-circle-left" aria-hidden="true"></i>
+                    <span id ="center" ></span>
+                    <i id="forward" class="fa fa-arrow-circle-right" aria-hidden="true"></i>
+                </h2>
             </div>
         </div>
     </body>
