small loading fixes

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <h2 id="domainNamesLabel">Domain Names Wordlist:</h2>
             </div>
             <div id="domainNamesRadio" class="radioContainer">
-                <div id="alpha1" class="radioButton domainRadioButton radioUnselected" onclick="showResults('alpha1',null)">ALPHA1</div
+                <div id="alpha1" class="radioButton domainRadioButton radioSelected" onclick="showResults('alpha1',null)">ALPHA1</div
                 ><div id="alpha2" class="radioButton domainRadioButton radioUnselected" onclick="showResults('alpha2',null)">ALPHA2</div
                 ><div id="alpha3" class="radioButton domainRadioButton radioUnselected" onclick="showResults('alpha3',null)">ALPHA3</div
                 ><div id="englishdict" class="radioButton domainRadioButton radioUnselected" onclick="showResults('englishdict',null)">ENGLISHDICT</div
@@ -34,7 +34,7 @@
                 <h2 id="extensionNamesLabel">Domain Extensions:</h2>
             </div>
             <div id="extensionNamesRadio" class="radioContainer">
-                <div id="com" class="radioButton extensionRadioButton radioUnselected" onclick="showResults(null, 'com')">.com</div
+                <div id="com" class="radioButton extensionRadioButton radioSelected" onclick="showResults(null, 'com')">.com</div
                 ><div id="net" class="radioButton extensionRadioButton radioUnselected" onclick="showResults(null, 'net')">.net</div
                 ><div id="io" class="radioButton extensionRadioButton radioUnselected" onclick="showResults(null, 'io')">.io</div>
             </div>
@@ -60,6 +60,7 @@
                     </div
                     ><div id="taken" class="freeTakenListContainer">
                         <ol id="takenList">
+                            <li>a.com</li><li>b.com</li><li>c.com</li><li>d.com</li><li>e.com</li><li>f.com</li><li>g.com</li><li>h.com</li><li>i.com</li><li>j.com</li><li>k.com</li><li>l.com</li><li>m.com</li><li>n.com</li><li>o.com</li><li>p.com</li><li>q.com</li><li>r.com</li><li>s.com</li><li>t.com</li><li>u.com</li><li>v.com</li><li>w.com</li><li>x.com</li><li>y.com</li><li>z.com</li>
                         </ol>
                     </div>
                 </div>
@@ -67,7 +68,7 @@
             <div id="pageToggleContainer" class="header2Container">
                 <h2 id="pageToggleHeader">
                     <i id="back" class="fa fa-arrow-circle-left" aria-hidden="true"></i>
-                    <span id ="center" ></span>
+                    <span id ="center"></span>
                     <i id="forward" class="fa fa-arrow-circle-right" aria-hidden="true"></i>
                 </h2>
             </div>
