--- a/index.html
+++ b/index.html
@@ -23,22 +23,21 @@
                 <h2 id="domainNamesLabel">Domain Names Wordlist:</h2>
             </div>
             <div id="domainNamesRadio" class="radioContainer">
-                <div id="alpha1" class="radioButton domainRadioButton radioSelected" onclick="showResults('alpha1',null)">ALPHA1</div
+                <div id="alpha1" class="radioButton domainRadioButton radioUnselected" onclick="showResults('alpha1',null)">ALPHA1</div
                 ><div id="alpha2" class="radioButton domainRadioButton radioUnselected" onclick="showResults('alpha2',null)">ALPHA2</div
                 ><div id="alpha3" class="radioButton domainRadioButton radioUnselected" onclick="showResults('alpha3',null)">ALPHA3</div
                 ><div id="englishdict" class="radioButton domainRadioButton radioUnselected" onclick="showResults('englishdict',null)">ENGLISHDICT</div
-                ><div id="girlnames" class="radioButton domainRadioButton radioUnselected" onclick="showResults('girlnames',null)">GIRLNAMES</div
-                ><div id="boynames" class="radioButton domainRadioButton radioUnselected" onclick="showResults('boynames',null)">BOYNAMES</div>
+                ><div id="names" class="radioButton domainRadioButton radioUnselected" onclick="showResults('names',null)">NAMES</div>
             </div>
             <div class="header2Container">
                 <h2 id="extensionNamesLabel">Domain Extensions:</h2>
             </div>
             <div id="extensionNamesRadio" class="radioContainer">
-                <div id="com" class="radioButton extensionRadioButton radioSelected" onclick="showResults(null, 'com')">.com</div
+                <div id="com" class="radioButton extensionRadioButton radioUnselected" onclick="showResults(null, 'com')">.com</div
                 ><div id="net" class="radioButton extensionRadioButton radioUnselected" onclick="showResults(null, 'net')">.net</div
                 ><div id="io" class="radioButton extensionRadioButton radioUnselected" onclick="showResults(null, 'io')">.io</div>
             </div>
-            <div class="header2Container">
+            <div id="freeTakenLabelContainer" class="header2Container">
                 <h2 class="splitHeader">
                     Free
                     <a id="freeDownload" class="download" href="" download="">
