added a progress percentage when loading the data

--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
                 ><div id="net" class="radioButton extensionRadioButton radioUnselected" onclick="showResults(null, 'net')">.net</div
                 ><div id="io" class="radioButton extensionRadioButton radioUnselected" onclick="showResults(null, 'io')">.io</div>
             </div>
+            <div id="loadingContainer" class="header2Container">
+                <h2 id="loadingLabel">Loading Data: 0%</h2>
+            </div>
             <div id="freeTakenLabelContainer" class="header2Container">
                 <h2 class="splitHeader">
                     Free
