--- a/index.html
+++ b/index.html
@@ -1,83 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>whoisscrape</title>
-        <meta name="viewport" content="width=device-width,initial-scale=1.0">
-        <link rel="icon" type="image/x-icon" href="web/img/favicon.ico">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
-        <link rel="stylesheet" href="web/css/index.css">
-    </head>
-    <body>
-        <div id="bodyContainer">
-            <div class="header1Container">
-                <h1 id="mainHeader">whoisscrape 
-                    <a href="https://github.com/johnprovazek/whoisscrape">
-                        <i class="fa fa-github-square" aria-hidden="true"></i>
-                    </a>
-                </h1>
-            </div>
-            <div id="paragraphContainer">
-                <p id="preamble">This project site is for displaying select results from a set of Bash scripts I developed. The scripts run the <i>whois</i> command on a loop through a list of domain names and domain extensions. Change the toggles below to see sample output from the scripts.</p>
-            </div>
-            <div class="header2Container">
-                <h2 id="domainNamesLabel">Domain Names Wordlist:</h2>
-            </div>
-            <div id="domainNamesRadio" class="radioContainer">
-                <div id="alpha1" class="radioButton domainRadioButton radioUnselected" onclick="showResults('alpha1',null)">ALPHA1</div
-                ><div id="alpha2" class="radioButton domainRadioButton radioUnselected" onclick="showResults('alpha2',null)">ALPHA2</div
-                ><div id="alpha3" class="radioButton domainRadioButton radioUnselected" onclick="showResults('alpha3',null)">ALPHA3</div
-                ><div id="englishdict" class="radioButton domainRadioButton radioUnselected" onclick="showResults('englishdict',null)">ENGLISHDICT</div
-                ><div id="names" class="radioButton domainRadioButton radioUnselected" onclick="showResults('names',null)">NAMES</div>
-            </div>
-            <div class="header2Container">
-                <h2 id="extensionNamesLabel">Domain Extensions:</h2>
-            </div>
-            <div id="extensionNamesRadio" class="radioContainer">
-                <div id="com" class="radioButton extensionRadioButton radioUnselected" onclick="showResults(null, 'com')">.com</div
-                ><div id="net" class="radioButton extensionRadioButton radioUnselected" onclick="showResults(null, 'net')">.net</div
-                ><div id="io" class="radioButton extensionRadioButton radioUnselected" onclick="showResults(null, 'io')">.io</div>
-            </div>
-            <div id="loadingContainer" class="header2Container">
-                <h2 id="loadingLabel">Loading Data: 0%</h2>
-            </div>
-            <div id="freeTakenLabelContainer" class="header2Container">
-                <h2 class="splitHeader">
-                    Free
-                    <a id="freeDownload" class="download" href="" download="">
-                        <i class="fa fa-download" aria-hidden="true"></i>
-                    </a>
-                </h2
-                ><h2 class="splitHeader">
-                    Taken 
-                    <a id="takenDownload" class="download" href="" download="">
-                        <i class="fa fa-download" aria-hidden="true"></i>
-                    </a>
-                </h2>
-            </div>
-            <div id="freeTakenContainer">
-                <div id="freeTakenBackgroundContainer">
-                    <div id="free" class="freeTakenListContainer">
-                        <ol id="freeList">
-                        </ol>
-                    </div
-                    ><div id="taken" class="freeTakenListContainer">
-                        <ol id="takenList">
-                            <li>a.com</li><li>b.com</li><li>c.com</li><li>d.com</li><li>e.com</li><li>f.com</li><li>g.com</li><li>h.com</li><li>i.com</li><li>j.com</li><li>k.com</li><li>l.com</li><li>m.com</li><li>n.com</li><li>o.com</li><li>p.com</li><li>q.com</li><li>r.com</li><li>s.com</li><li>t.com</li><li>u.com</li><li>v.com</li><li>w.com</li><li>x.com</li><li>y.com</li><li>z.com</li>
-                        </ol>
-                    </div>
-                </div>
-            </div>
-            <div class="header2Container">
-                <h2 id="dateLabel"></h2>
-            </div>
-            <div id="pageToggleContainer" class="header2Container">
-                <h2 id="pageToggleHeader">
-                    <i id="back" class="fa fa-arrow-circle-left" aria-hidden="true"></i>
-                    <span id ="center"></span>
-                    <i id="forward" class="fa fa-arrow-circle-right" aria-hidden="true"></i>
-                </h2>
-            </div>
+  <head>
+    <title>whoisscrape</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="web/img/favicon.ico">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
+    <link rel="stylesheet" href="web/css/index.css">
+  </head>
+  <body>
+    <div id="body-container">
+      <div class="title-container">
+        <h1>whoisscrape 
+          <a href="https://github.com/johnprovazek/whoisscrape">
+            <i class="fa fa-github-square" aria-hidden="true"></i>
+          </a>
+        </h1>
+      </div>
+      <div id="paragraph-container">
+        <p>This project site is for displaying select results from a set of Bash scripts I developed. The scripts run the <i>whois</i> command on a loop through a list of domain names and domain extensions. Change the toggles below to see sample output from the scripts.</p>
+      </div>
+      <div class="header-container">
+        <h2>Domain Names Wordlist:</h2>
+      </div>
+      <div class="radio-container">
+        <div id="alpha1" class="radio-button domain-radio-button radio-unselected" onclick="showResults('alpha1',null)">ALPHA1</div
+        ><div id="alpha2" class="radio-button domain-radio-button radio-unselected" onclick="showResults('alpha2',null)">ALPHA2</div
+        ><div id="alpha3" class="radio-button domain-radio-button radio-unselected" onclick="showResults('alpha3',null)">ALPHA3</div
+        ><div id="englishdict" class="radio-button domain-radio-button radio-unselected" onclick="showResults('englishdict',null)">ENGLISHDICT</div
+        ><div id="names" class="radio-button domain-radio-button radio-unselected" onclick="showResults('names',null)">NAMES</div>
+      </div>
+      <div class="header-container">
+        <h2>Domain Extensions:</h2>
+      </div>
+      <div class="radio-container">
+        <div id="com" class="radio-button extension-radio-button radio-unselected" onclick="showResults(null, 'com')">.com</div
+        ><div id="net" class="radio-button extension-radio-button radio-unselected" onclick="showResults(null, 'net')">.net</div
+        ><div id="io" class="radio-button extension-radio-button radio-unselected" onclick="showResults(null, 'io')">.io</div>
+      </div>
+      <div id="loading-container" class="header-container">
+        <h2 id="loading-label">Loading Data: 0%</h2>
+      </div>
+      <div id="free-taken-label-container" class="header-container">
+        <h2 class="split-header">
+          Free
+          <a id="free-download" class="download" href="" download="">
+            <i class="fa fa-download" aria-hidden="true"></i>
+          </a>
+        </h2
+        ><h2 class="split-header">
+          Taken 
+          <a id="taken-download" class="download" href="" download="">
+            <i class="fa fa-download" aria-hidden="true"></i>
+          </a>
+        </h2>
+      </div>
+      <div id="free-taken-container">
+        <div id="free-taken-content-container">
+          <div class="free-taken-list-container">
+            <ol id="free-list"></ol>
+          </div
+          ><div class="free-taken-list-container">
+            <ol id="taken-list">
+              <li>a.com</li><li>b.com</li><li>c.com</li><li>d.com</li><li>e.com</li><li>f.com</li><li>g.com</li><li>h.com</li><li>i.com</li><li>j.com</li><li>k.com</li><li>l.com</li><li>m.com</li><li>n.com</li><li>o.com</li><li>p.com</li><li>q.com</li><li>r.com</li><li>s.com</li><li>t.com</li><li>u.com</li><li>v.com</li><li>w.com</li><li>x.com</li><li>y.com</li><li>z.com</li>
+            </ol>
+          </div>
         </div>
-    </body>
-    <script src="web/js/index.js"></script>
+      </div>
+      <div class="header-container">
+        <h2 id="date-label"></h2>
+      </div>
+      <div class="header-container">
+        <h2>
+          <i id="back" class="fa fa-arrow-circle-left nav-toggle nav-toggle-disabled" aria-hidden="true"></i>
+          <span id="page-num"></span>
+          <i id="forward" class="fa fa-arrow-circle-right nav-toggle nav-toggle-disabled" aria-hidden="true"></i>
+        </h2>
+      </div>
+    </div>
+  </body>
+  <script src="web/js/index.js"></script>
 </html>
